kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-app.utibeokon.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-app-service
            port:
              number: 80
  # - host: "*.foo.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/foo"
  #       backend:
  #         service:
  #           name: service2
  #           port:
  #             number: 80
